feat 'status filter for accepted'

--- a/find_subtaxa.ipynb
+++ b/find_subtaxa.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 11,
    "id": "48ee841e",
    "metadata": {},
    "outputs": [],
@@ -12,18 +12,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 12,
    "id": "a7b42efc",
    "metadata": {},
    "outputs": [],
    "source": [
     "## Enter the genus name\n",
-    "parents_name = \"Acartiidae\" # <<here!!"
+    "parents_name = \"Acartia\" # <<here!!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 13,
    "id": "34fd9765",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 14,
    "id": "c8168dba",
    "metadata": {},
    "outputs": [
@@ -44,7 +44,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "104074\n"
+      "104108\n"
      ]
     }
    ],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 15,
    "id": "4f1b92b3",
    "metadata": {},
    "outputs": [
@@ -67,15 +67,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "child list belonging to parentAcartiidae:\n",
-      "- Acartia\n",
-      "- Acartiella\n",
-      "- Dias\n",
-      "- Hypoacartia\n",
-      "- Mesqueria\n",
-      "- Paracartia\n",
-      "- Paralabidocera\n",
-      "- Pteriacartia\n"
+      "child list belonging to parentAcartia:\n",
+      "- Acartia arbruta\n",
+      "- Acartia denticornis\n"
      ]
     }
    ],
@@ -91,11 +85,18 @@
     "    print(f\"child list belonging to parent{parents_name}:\")\n",
     "    for child in children:\n",
     "        # you can choose the taxonomic unit\n",
-    "        if child['rank'] == 'Genus': # << here!!\n",
+    "        if child['rank'] == 'Species' and child['status'] == 'accepted':\n",
+    "        \n",
     "            print(f\"- {child['scientificname']}\")\n",
     "else:\n",
     "    print(f\"No children belonging to the parent{parents_name} can be found.\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a6dc7014",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
